--- a/Observer2/index.html
+++ b/Observer2/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="test"></button>
     <script src="index.js" type="module"></script>
 </body>
 </html>
