gestion multi dab

--- a/Observer/index.html
+++ b/Observer/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="withdraw">Withdraw</button>
-    <button id="deposite">Deposite</button>
+    DAB Lille
+    <button class="withdraw" data-name="Lille">Withdraw</button>
+    <button class="deposite" data-name="Lille">Deposite</button>
+
+    DAB Five
+    <button class="withdraw" data-name="Five">Withdraw</button>
+    <button class="deposite" data-name="Five">Deposite</button>
     <script src="index.js" type="module"></script>
 </body>
 </html>
